Fixed subnav overflow issue

--- a/client/public/stylesheets/styles.css
+++ b/client/public/stylesheets/styles.css
@@ -1631,7 +1631,7 @@ div#overflow_subnav {
 	height: 45px;
 	position: relative;
 	border-bottom: 2px solid #6e74b4;
-	margin: -20px 0 20px 0;
+	margin: 0px 0 20px 0;
 	padding-top: 20px;
 	
 }
